[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "paradoc"
version = "0.0.6"
authors = [
    { name = "Kristoffer H. Andersen", email = "kristoffer_andersen@outlook.com" },
]
description = "A Python library for Parametric Documentation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
[project.scripts]
paradoc = "paradoc.cli_app:app"

[project.urls]
"Homepage" = "https://github.com/Krande/paradoc"
"Bug Tracker" = "https://github.com/Krande/paradoc/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
ignore = ["E741"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120
ignore = ["E24", "E121", "E123", "E126", "E203", "E226", "E704", "E741", "W503", "W504"]